src/index.css
@import 'normalize.css/normalize.css';
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
:root {
  font-family: 'Source Sans Pro', system-ui, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  height: 100%;
  width: 100%;
}
body {
  margin: 0;
  min-height: 100vh;
  height: 100vh;
  height: 100dvh;
  max-width: 100vw;
  width: 100vw;
  width: 100dvw;
  overflow-x: hidden;
}

p {
  font-family: 'Work Sans', sans-serif;
}

